# CudaRL

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
include/cudarl/: backend.h  tensor.h
scripts/: build.sh  lint.sh  test.sh
src/backends/: backend_cpu.cpp  backend_cpu.h  backend_cuda.cu  backend_cuda.h
src/core/: tensor.cpp
tests/: test_tensor.cpp
